--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>您要找的页面不存在-路钦</title>
+    <link href="https://avatars2.githubusercontent.com/u/39289341?s=460&u=6b334ba85f83d14aee9a01308c0e65007b224c1d&v=4" rel="shortcut icon" type="image/x-icon">
     <style type="text/css">
         .ui-error-box{
  
