--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			var _hmt = _hmt || [];
 			(function() {
 			  var hm = document.createElement("script");
-			  hm.src = "asstes/js/hm.js?0309212fba2d0ece7bc574c03f038b8e";
+			  hm.src = "https://hm.baidu.com/hm.js?0309212fba2d0ece7bc574c03f038b8e";
 			  var s = document.getElementsByTagName("script")[0]; 
 			  s.parentNode.insertBefore(hm, s);
 			})();
