--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		 <meta name="keywords" content="路钦的个人博客" />
 		 <meta name="description" content="欢迎来到我的主页" />
 		 <link href="asstes/css/style.css" rel="stylesheet" type="text/css" media="all">
-		 <link rel="shortcut icon" href="asstes/img/head.png"/>
+		 <link rel="shortcut icon" href="asstes/images/head.png"/>
 		 <script type="text/javascript" src="asstes/js/jquery-1.8.2.min.js"></script>
 		 <script type="text/javascript" src="asstes/js/jquery.masonry.min.js"></script>
 		 <script type="text/javascript" src="asstes/js/base.js"></script>
@@ -29,8 +29,8 @@
 					<div class="main">
 						<div class="caption"><h3 style="color: red">欢迎来到我的主页</h1></div>
 						<div class="headimg">
-							<img src="asstes/img/head.png" class="xwcms" 
-							onmouseover="this.src='asstes/img/head.png'" onmouseout="this.src='asstes/img/head.png'"/>
+							<img src="asstes/images/head.png" class="xwcms" 
+							onmouseover="this.src='asstes/images/head.png'" onmouseout="this.src='asstes/images/head.png'"/>
 						</div>
 						<div class="caption">
 							<a href="https://www.jianshu.com/u/9ff08a9275ed" style="color:white;">苦海飘摇</a>
@@ -71,7 +71,7 @@
 				<div class="tipMenu">
 					<div class="top">
 						<div class="close">
-							<img src="asstes/img/cross.png"/>
+							<img src="asstes/images/cross.png"/>
 						</div>
 					</div>
 					<div class="center">
@@ -91,7 +91,7 @@
 						</div>
 						<div class="tipMenuTags">
 							 <div class="wximg">
-								<img src="asstes/img/wx.jpg"/>
+								<img src="asstes/images/wx.jpg"/>
 							 </div>
 						</div>
 					</div>
