--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <style type="text/css">
         .ui-error-box{
  
-            background-image: url(/images/head.jpg); height:260px; width: 410px; margin: 80px auto;
+            background-image: url(asstes/images/head.png); height:260px; width: 410px; margin: 80px auto;
             color: #eb6100; font-weight: bold; padding: 140px 0 0 198px;
          
 }
