--- a/index.html
+++ b/index.html
@@ -50,73 +50,45 @@
     <div class="rightblock">
         <div class="content" id="content">
             <div class="item">
-                <div class="title"><a href="#" target="_blank">测试</a></div>
-                <div class="pimg"><a href="#" target="_blank"><img
-                        src="asstes/images/loading.gif"
-                        data-original="asstes/images/1.png"
-                        class="pic"></a></div>
-                <div class="info">
-                    <div>作者：彼岸花</div>
-                    <div>2020-01-13 20:23:12</div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="title"><a href="#" target="_blank">测试</a></div>
-                <div class="pimg"><a href="#" target="_blank"><img
-                        src="asstes/images/loading.gif"
-                        data-original="asstes/images/2.png"
-                        class="pic"></a></div>
-                <div class="info">
-                    <div>作者：彼岸花</div>
-                    <div>2020-01-13 21:29:08</div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="title"><a href="#" target="_blank">测试</a></div>
-                <div class="pimg"><a href="#" target="_blank"><img
-                        src="asstes/images/loading.gif"
-                        data-original="asstes/images/1.png"
-                        class="pic"></a></div>
-                <div class="info">
-                    <div>作者：彼岸花</div>
-                    <div>2020-01-13 20:23:12</div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="title"><a href="#" target="_blank">测试</a></div>
-                <div class="pimg"><a href="#" target="_blank"><img
-                        src="asstes/images/loading.gif"
-                        data-original="asstes/images/2.png"
-                        class="pic"></a></div>
-                <div class="info">
-                    <div>作者：彼岸花</div>
-                    <div>2020-01-13 21:29:08</div>
-                </div>
-            </div>
-             <div class="item">
-                <div class="title"><a href="#" target="_blank">测试</a></div>
-                <div class="pimg"><a href="#" target="_blank"><img
-                        src="asstes/images/loading.gif"
-                        data-original="asstes/images/1.png"
-                        class="pic"></a></div>
-                <div class="info">
-                    <div>作者：彼岸花</div>
-                    <div>2020-01-13 20:23:12</div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="title"><a href="#" target="_blank">测试</a></div>
-                <div class="pimg"><a href="#" target="_blank"><img
-                        src="asstes/images/loading.gif"
-                        data-original="asstes/images/2.png"
-                        class="pic"></a></div>
-                <div class="info">
-                    <div>作者：彼岸花</div>
-                    <div>2020-01-13 21:29:08</div>
-                </div>
+                <div class="title"><a href="https://www.jianshu.com/p/b752b6469806" target="_blank">python面试题</a></div>
+
+                <div class="title"><a href="https://www.jianshu.com/p/9e03bdf7328e" target="_blank">如何删除github上的项目</a></div>
+
+                <div class="title"><a href="https://www.jianshu.com/p/c4abc0ed23e2" target="_blank">IntelliJ 激活码、ios系统安卓逆向工具(IDA Pro_118728、mprop、JEB)、windows软件(取色器、Pointofix)、电路板资料</a></div>
+
+
+                <div class="title"><a href="https://www.jianshu.com/p/bc3fcfb27556" target="_blank">安卓刷机</a></div>
+
+                <div class="title"><a href="https://www.jianshu.com/p/0a47f105609b" target="_blank">修改ro.debuggable</a></div>
+
+                <div class="title"><a href="https://www.jianshu.com/p/80aa504bd35c" target="_blank">安卓逆向之Hybrid APP混合开发</a></div>
+
+                <div class="title"><a href="https://www.jianshu.com/p/e103fa5d6a11" target="_blank">逆向微信小程序</a></div>
+
+                <div class="title"><a href="https://www.jianshu.com/p/403e8a85d8af" target="_blank">FART环境下基于主动调用的自动化脱壳方案</a></div>
+
+                <div class="title"><a href="https://www.jianshu.com/p/3d9a54c9a763" target="_blank">android调用so文件</a></div>
+
+                <div class="title"><a href="https://www.jianshu.com/p/b9f606609437" target="_blank">爬虫之：okhttp拦截器interceptor</a></div>
+
+                <div class="title"><a href="https://www.jianshu.com/p/1eac04bb8ac5" target="_blank">python post请求之：Content-Type: multipart/form-data</a></div>
+
+
+                <div class="title"><a href="https://www.jianshu.com/p/30dff01bd5cb" target="_blank">将json格式的文件转为csv</a></div>
+
+                <div class="title"><a href="https://www.jianshu.com/p/21a1dd2b7180" target="_blank">excel打开csv乱码</a></div>
+
+                <div class="title"><a href="https://www.jianshu.com/p/c9a935d7d538" target="_blank">闪烁图片验证码处理</a></div>
+
+                <div class="title"><a href="https://github.com/luqin12368/adminMongo" target="_blank">adminMongo是一个跨平台用户界面（GUI），用于处理您的所有MongoDB连接/数据库需求。adminMongo具有完全响应能力，应该可以在多种设备上运行。</a></div>
+
+                <div class="title"><a href="https://github.com/luqin12368/Airtest" target="_blank">适用于游戏和应用程序的跨平台UI自动化框架</a></div>
+
+                <div class="title"><a href="https://github.com/luqin12368/e_word" target="_blank">易语言做的一些小玩意</a></div>
+
+                <div class="title"><a href="https://github.com/luqin12368/Valentine-s_Day_gift" target="_blank">易语言做的情人节礼物</a></div>
             </div>
         </div>
-
         <div class="tipBtn"></div>
 
         <div class="tipMenu">
@@ -151,8 +123,8 @@
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-<br/><br/><br/><br/><br/><br/>
-<script type="text/javascript" color="255,0,0" opacity='0.7' zIndex="-2" count="100"
+<br/><br/><br/><br/><br/><br/><br/><br/><br/>
+<script type="text/javascript" color="255,0,0" opacity='1' zIndex="-2" count="100"
         src="asstes/js/canvas-nest.js"></script>
 </body>
 <script>
@@ -213,14 +185,6 @@
             effect: "fadeIn",
             failurelimit: 40,
             load: f_masonry,
-        });
-
-        jQuery(".item").on("mouseover", function () {
-            jQuery(this).css("box-shadow", "0 0 5px rgba(0,0,0,0.3)");
-        });
-
-        jQuery(".item").on("mouseout", function () {
-            jQuery(this).css("box-shadow", "0 0 2px rgba(0,0,0,0.1)");
         });
     });
 </script>
