--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 
                 <div class="title"><a href="https://www.jianshu.com/p/1eac04bb8ac5" target="_blank">python post请求之：Content-Type: multipart/form-data</a></div>
 
+                <div class="title"><a href="https://www.jianshu.com/p/678d7f90bf72" target="_blank">FRIDA-API使用篇：rpc、Process、Module、Memory使用方法及示例</a></div>
+
 
                 <div class="title"><a href="https://www.jianshu.com/p/30dff01bd5cb" target="_blank">将json格式的文件转为csv</a></div>
 
