--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     <div class="rightblock">
         <div class="content" id="content">
             <div class="item">
+                <div class="title"><a href="https://www.jianshu.com/p/778e5a6d4f0f" target="_blank"></a>leetcode算法(持续更新中)</div>
+
                 <div class="title"><a href="https://www.jianshu.com/p/b752b6469806" target="_blank">python面试题</a></div>
 
                 <div class="title"><a href="https://www.jianshu.com/p/9e03bdf7328e" target="_blank">如何删除github上的项目</a></div>
