--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="rightblock">
         <div class="content" id="content">
             <div class="item">
-                <div class="title"><a href="https://www.jianshu.com/p/778e5a6d4f0f" target="_blank"></a>leetcode算法(持续更新中)</div>
+                <div class="title"><a href="https://www.jianshu.com/p/778e5a6d4f0f" target="_blank">leetcode算法(持续更新中)</a></div>
 
                 <div class="title"><a href="https://www.jianshu.com/p/b752b6469806" target="_blank">python面试题</a></div>
 
