--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>luqin</title>
-    <meta name="keywords" content="路钦的个人博客"/>
+    <title>知秋一叶</title>
+    <meta name="keywords" content="知秋一叶的个人博客"/>
     <meta name="description" content="欢迎来到我的主页"/>
     <link href="asstes/css/style.css" rel="stylesheet" type="text/css" media="all">
     <link rel="shortcut icon" href="asstes/images/head.png"/>
@@ -35,12 +35,12 @@
                          onmouseout="this.src='asstes/images/head.png'"/>
                 </div>
                 <div class="caption">
-                    <a href="https://www.jianshu.com/u/9ff08a9275ed" style="color:white;">苦海飘摇</a>
+                    <a href="https://www.jianshu.com/u/9ff08a9275ed" style="color:white;">知秋一叶</a>
                 </div>
                 <div class="des">
-                    <span>我的名字：“苦海飘摇”</span>
+                    <span>我的名字：“知秋一叶”</span>
                     <span>程序猿/轻生活/轻日记/轻梦想</span>
-                    <span>======QQ：1215490667======</span>
+                    <span>======wx：luqin12368======</span>
                 </div>
             </div>
         </div>
